--- a/src/App.css
+++ b/src/App.css
@@ -1,209 +1,11 @@
-.nav{
-  display: flex;
-  flex-wrap: nowrap;
-  width: 100%;
-  background-color: skyblue;
-  position: fixed;
-  top:0%
-}
-.nav-ul li{
-  display: inline;
-  padding: 10px;
-}
-
-.nav-ul li a{
-  color: #fff;
-  padding: 5px;
-  text-decoration: none;
-  font-size: large;
-}
-
-.nav-ul {
-  padding: 18px;
-  margin: 0;
-  width: 100%;
-}
-
-/* .footer{
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  width: 100%;
-  background-color: skyblue;
-} */
-
-.footer {
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  height: 36px;
-  background-color: skyblue;
-  color:gray;
-  text-align: center;
-  padding: 6px;
-}
-
-.register, .login{
-  margin-left: 30%;
-  margin-top: 80px;
-  margin-bottom: 50px;
-}
-
-
-
-.profile-detail{
-  border: 1px solid white;
-  color: black;
-    width: 400px;
-    padding: 20px;
-    background-color: rgb(162, 238, 255);
-}
-
-.product{
-  margin-left: 10%;
-  margin-top: 220px;
-  margin-bottom: 120px;
-}
-
-.about, .profile{
-  width: 60%;
-  margin-top: 100px;
-  margin-left: 10%;
-}
-
-.nav-right{
-  text-align: right;
-}
-
-.logo{
-  height: 61px;
-  width: 73px;
-  border-radius: 50%;
-  margin-top: 2px;
-  margin-left: 14px;
-  float: left;
-  padding: 5px;
-}
-
-.inputbox{
-  display: block;
-  margin-bottom: 30px;
-  padding: 10px;
-  width: 50%;
-  border: 1px solid skyblue;
-}
-
-.appbutton{
-  margin-top: 22px;
-  padding: 5px;
-  width: 150px;
-  border: 1px solid rgb(40, 100, 115);
-  cursor: pointer;
-  background: skyblue;
-}
-
-.invalid-input{
-  color: red;
-  margin-top: -20px;
-  display: block;
-  margin-left: 20px;
-  font-size: small;
-}
-
-.product-list{
-  /* text-align: center; */
-  margin: 4rem;
-}
-
-.product-list ul li{
-  display: table-cell;
-  border: 1px solid skyblue;
-  padding: 9px;
-  width: 20vh;
-  /* text-wrap: nowrap; */
-  height: 45px;
-  left: 40px;
-}
-
-.product-list ul{
-  margin: 0;
-}
-
-.search-product-box{
-  width: 400px;
-  margin: 20px;
-  height: 30px;
-  border: 1px solid skyblue;
-  padding-left: 20px;
-}
-
-.deleteButton{
-  background-color: rgb(235, 43, 43);
-  border-radius: 20px;
-}
-
-.updateButton{
-  border-radius: 20px;
-  
-}
-
-.linkButton{
-  text-decoration: none;
-  color: black;
-}
-
-
-
+/* Only apply animation if user prefers no reduced motion */
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin 20s linear infinite;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.capcha{
-    /* border: 1px solid black; */
-    padding: 7px;
-    margin: 9px;
-    display: inline-block;
-    color: red;
-    width: 111px;
-    text-align: center;
-    font-weight: 900;
-    margin-left: 3%;
-}
-
-.container{
-  display: inline-block;
-  padding: 20px;
-}
-.search-bar{
-  position: fixed;
-  margin-top: 60px;
-  background-color: white;
-  padding-left: 10%;
-  padding-top: 20px;
-}
-
-.col-6 {
-  flex: 0 0 auto;
-  width: 33%;
-}
-
+/* Define the spinning animation */
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -211,4 +13,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.main-content{
+    margin-top: 100px;
 }
